actualizacion de gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Practica_[0-9]*/*.o
 Practica_[0-9]*/main
-Practica_01/*_case/*
+Practica_01/Part_*/*.o
+Practica_01/Part_*/main
+Practica_01/Part_01/*_case/*
